@@ -1344,6 +1344,7 @@ sstring TBeing::describeAffects(TBeing *ch, showMeT showme) const
       case SPELL_WORD_OF_RECALL:
       case SPELL_SANCTUARY:
       case SPELL_RELIVE:
+      case SPELL_CRUSADE:
       case SPELL_CURE_PARALYSIS:
       case SPELL_SECOND_WIND:
       case SPELL_HEROES_FEAST:
